--- a/css/normalize.css
+++ b/css/normalize.css
@@ -12,6 +12,11 @@ html {
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
+.rightimg {
+  float: right; /* Выравнивание по правому краю  */
+  margin: 7px 0 7px 7px; /* Отступы вокруг картинки */
+}
+
 /**
  * Remove default margin.
  */
